tests/test_struct/bad/output/empty_struct.catala_en.Typecheck
[ERROR] The struct Foo does not have any fields; give it some for Catala to be able to accept it.

 --> tests/test_struct/bad/empty_struct.catala_en
  | 
4 | declaration structure Foo:
  |                       ^^^
  + Test
